--- a/test2/OpenApprovalRequestWindow.xaml
+++ b/test2/OpenApprovalRequestWindow.xaml
@@ -30,7 +30,9 @@ SelectionChanged="comboBox_SelectionChanged">
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
             <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10"/>
 
-            <Button Content="Update" Width="200" Click="UpdateButton_Click"/>
+
+            <Button Name="ApproveButton" Content="Approve request" Width="200" Click="ApproveButton_Click"/>
+            <Button Name="RejectButton" Content="Reject request" Width="200" Click="RejectButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
