--- a/test2/EditProjectWindow.xaml
+++ b/test2/EditProjectWindow.xaml
@@ -37,7 +37,7 @@
       SelectionChanged="ComboBox2_SelectionChanged">
             </ComboBox>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+            <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10"/>
             <TextBlock TextWrapping="Wrap" Text="Project Status"/>
             <ComboBox Name="comboBox3" 
 Width="200" 
