--- a/test2/NewLeaveRequestWindow.xaml
+++ b/test2/NewLeaveRequestWindow.xaml
@@ -11,7 +11,7 @@
             
             <TextBlock TextWrapping="Wrap" Text="Employee"/>
             <TextBox x:Name="EmployeeTextBox" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Absence Reason"/>
+            <TextBlock TextWrapping="Wrap" Text="Absence Reason (Required)"/>
             <ComboBox Name="comboBox" 
 Width="200" 
 Height="30" 
@@ -24,9 +24,9 @@ SelectionChanged="comboBox_SelectionChanged">
                 <ComboBoxItem Content="D" />
 
             </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Start Date"/>
+            <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
             <DatePicker Name="StartDate"/>
-            <TextBlock TextWrapping="Wrap" Text="End Date"/>
+            <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
             <DatePicker Name="EndDate"/>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
             <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10"/>
