--- a/test2/RegisterWindow.xaml
+++ b/test2/RegisterWindow.xaml
@@ -12,9 +12,9 @@
             <TextBlock TextWrapping="Wrap" Text="Username (Required)"/>
             <TextBox x:Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
             <TextBlock TextWrapping="Wrap" Text="Password (Required)"/>
-            <PasswordBox x:Name="PasswordBox" local:SecurePasswordBoxBehavior.SecurePassword="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+            <PasswordBox x:Name="PasswordBox" local:PasswordHelper.Attach="True"  local:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
             <TextBlock TextWrapping="Wrap" Text="Confirm password (Required)"/>
-            <PasswordBox x:Name="ConfirmPasswordBox" local:SecurePasswordBoxBehavior.SecurePassword="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+            <PasswordBox x:Name="ConfirmPasswordBox" local:PasswordHelper.Attach="True" local:PasswordHelper.Password="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
             <TextBlock TextWrapping="Wrap" Text="Full name (Required)"/>
             <TextBox x:Name="FullnameTextBox" Text="{Binding FullName}" Width="200"  Margin="0,0,0,10"/>
 
@@ -27,7 +27,7 @@
                   Height="30" 
                   VerticalAlignment="Center" 
                   HorizontalAlignment="Center"
-                  SelectionChanged="ComboBox_SelectionChanged">
+                  >
                 
             </ComboBox>
             <TextBlock TextWrapping="Wrap" Text="Position (Required)"/>
@@ -38,7 +38,7 @@
        Height="30" 
        VerticalAlignment="Center" 
        HorizontalAlignment="Center"
-       SelectionChanged="comboBox2_SelectionChanged">
+       >
                 
 
             </ComboBox>
@@ -50,7 +50,7 @@
         Height="30" 
         VerticalAlignment="Center" 
         HorizontalAlignment="Center"
-        SelectionChanged="comboBox3_SelectionChanged">
+        >
                 
                 
 
@@ -63,7 +63,7 @@ Width="200"
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
-SelectionChanged="comboBox4_SelectionChanged">
+>
   
 
 
@@ -71,7 +71,7 @@ SelectionChanged="comboBox4_SelectionChanged">
             
             <TextBlock TextWrapping="Wrap" Text="Photo"/>
             <Image Name="PhotoImage" Source="{Binding ImageSource}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="200" Height="200"/>
-            <Button Content="Add photo" Command="{Binding AddPhtoCommand}" Width="200" />
+            <Button Content="Add photo" Command="{Binding AddPhotoCommand}" Width="200" />
             <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
         </StackPanel>
 
