--- a/test2/LeaveRequestsWindow.xaml
+++ b/test2/LeaveRequestsWindow.xaml
@@ -3,36 +3,37 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test2"
+        xmlns:local="clr-namespace:test2" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LeaveRequestsViewModel}"
         mc:Ignorable="d"
         Title="LeaveRequestsWindow" Height="750" Width="800">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="675">
             <TextBlock TextWrapping="Wrap" Text="Id"/>
-            <TextBox x:Name="IdTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Employee"/>
-            <TextBox x:Name="EmployeeTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="EmployeeTextBox" Text="{Binding Employee}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Absence Reason"/>
-            <TextBox x:Name="AbsenceReasonTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="AbsenceReasonTextBox" Text="{Binding AbsenceReasonn}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Start Date"/>
-            <TextBox x:Name="StartDateTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="StartDateTextBox" Text="{Binding StartDate}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="End Date"/>
-            <TextBox x:Name="EndDateTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="EndDateTextBox" Text="{Binding EndDate}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <TextBox x:Name="StatusTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <Button Content="Filter" Width="200" Click="FilterButton_Click" HorizontalAlignment="Left"/>
-            <Button Content="New Leave Request" Width="200" Click="NewLeaveRequestButton_Click" HorizontalAlignment="Left"/>
+            <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <Button Content="Filter" Width="200"  Command="{Binding FilterCommand}" HorizontalAlignment="Left"/>
+            <Button Content="New Leave Request" Width="200"  Command="{Binding NewLeaveRequestCommand}" HorizontalAlignment="Left"/>
 
             <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
           CanUserAddRows="True" CanUserDeleteRows="True"
           CanUserSortColumns="True" IsReadOnly="True"
-          SelectionMode="Single" MouseDoubleClick="DataGrid_MouseDoubleClick">
+          SelectionMode="Single" ItemsSource="{Binding FilteredLeaveRequests}" 
+          SelectedItem="{Binding SelectedLeaveRequest, Mode=TwoWay}" MouseDoubleClick="DataGrid_MouseDoubleClick">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Employee" Binding="{Binding Employee}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Absence Reason" Binding="{Binding AbsenceReason}" IsReadOnly="False"/>
+                    <DataGridTextColumn Header="Absence Reason" Binding="{Binding AbsenceReasonn}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate, StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="End Date" Binding="{Binding EndDate , StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
