--- a/test2/LeaveRequestsWindow.xaml
+++ b/test2/LeaveRequestsWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LeaveRequestsViewModel}"
-        mc:Ignorable="d"
+        mc:Ignorable="d" xmlns:behaviors="clr-namespace:test2.Behaviors"
         Title="LeaveRequestsWindow" Height="750" Width="800">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="675">
@@ -26,10 +26,10 @@
             <Button Content="New Leave Request" Width="200"  Command="{Binding NewLeaveRequestCommand}" HorizontalAlignment="Left"/>
 
             <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
-          CanUserAddRows="True" CanUserDeleteRows="True"
+          CanUserAddRows="False" CanUserDeleteRows="False"
           CanUserSortColumns="True" IsReadOnly="True"
           SelectionMode="Single" ItemsSource="{Binding FilteredLeaveRequests}" 
-          SelectedItem="{Binding SelectedLeaveRequest, Mode=TwoWay}" MouseDoubleClick="DataGrid_MouseDoubleClick">
+          SelectedItem="{Binding SelectedLeaveRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Employee" Binding="{Binding Employee}" IsReadOnly="False"/>
@@ -39,6 +39,12 @@
                     <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
                     <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
                 </DataGrid.Columns>
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="Focusable" Value="True" />
+                        <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                    </Style>
+                </DataGrid.RowStyle>
             </DataGrid>
         </StackPanel>
     </Grid>
