--- a/test2/ProjectsWindow.xaml
+++ b/test2/ProjectsWindow.xaml
@@ -3,42 +3,55 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test2"
-        mc:Ignorable="d"
+        xmlns:local="clr-namespace:test2" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ProjectsViewModel}"
+        mc:Ignorable="d" xmlns:behaviors="clr-namespace:test2.Behaviors"
+        
         Title="ProjectsWindow" Height="750" Width="800">
+    <Window.Resources>
+        <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </Window.Resources>
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="575">
+            <TextBlock TextWrapping="Wrap" Text="Id"/>
+            <TextBox x:Name="IdTypeTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Project Type"/>
-            <TextBox x:Name="ProjectTypeTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="ProjectTypeTextBox" Text="{Binding ProjectTypee}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Start Date"/>
-            <TextBox x:Name="StartDateTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="StartDateTextBox" Text="{Binding StartDate}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="End Date"/>
-            <TextBox x:Name="EndDateTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="EndDateTextBox" Text="{Binding EndDate}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Project Manager"/>
-            <TextBox x:Name="ProjectManagerTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="ProjectManagerTextBox" Text="{Binding ProjectManager}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
             <TextBlock TextWrapping="Wrap" Text="Project Status"/>
-            <TextBox x:Name="ProjectStatusTextBox" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <Button Content="Filter" Width="200" Click="FilterButton_Click" HorizontalAlignment="Left"/>
-            <Button Name="myButton" Content="New Project" Width="200" Click="NewProjectButton_Click" HorizontalAlignment="Left"/>
-           
-        <DataGrid x:Name="ProjectDataGrid2" AutoGenerateColumns="False" 
-                   
-                  CanUserSortColumns="True" IsReadOnly="True"
-                  SelectionMode="Single"
+            <TextBox x:Name="ProjectStatusTextBox" Text="{Binding ProjectStatuss}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+            <Button Content="Filter" Width="200" Command="{Binding FilterCommand}"  HorizontalAlignment="Left"/>
+            <Button Name="myButton" Content="New Project" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding NewProjectCommand}" Width="200" HorizontalAlignment="Left"/>
 
- MouseDoubleClick="DataGrid2_MouseDoubleClick">
+            <DataGrid x:Name="ProjectDataGrid2" AutoGenerateColumns="False" 
+          CanUserAddRows="False" CanUserDeleteRows="False"
+          CanUserSortColumns="True" IsReadOnly="True"
+          SelectionMode="Single"
+
+  ItemsSource="{Binding FilteredProjects}" 
+          SelectedItem="{Binding Selectedproject, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}">
             <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}" />
-                    <DataGridTextColumn Header="Project Type" Binding="{Binding ProjectType}" />
+                    <DataGridTextColumn Header="Project Type" Binding="{Binding ProjectTypee}" />
                     <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate , StringFormat=dd/MM/yyyy}" />
                     <DataGridTextColumn Header="End Date" Binding="{Binding EndDate, StringFormat=dd/MM/yyyy}" />
                 <DataGridTextColumn Header="Project Manager" Binding="{Binding ProjectManager}" />
                 <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" />
-                <DataGridTextColumn Header="Project Status" Binding="{Binding ProjectStatus}" />
+                <DataGridTextColumn Header="Project Status" Binding="{Binding ProjectStatuss}" />
             </DataGrid.Columns>
-        </DataGrid>
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="Focusable" Value="True" />
+                        <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                    </Style>
+                </DataGrid.RowStyle>
+            </DataGrid>
         </StackPanel>
     </Grid>
 </Window>
