--- a/test2/NewProjectWindow.xaml
+++ b/test2/NewProjectWindow.xaml
@@ -3,50 +3,49 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test2"
+        xmlns:local="clr-namespace:test2" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:NewProjectViewModel}"
         mc:Ignorable="d"
         Title="NewProjectWindow" Height="450" Width="800">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
             <TextBlock TextWrapping="Wrap"  Text="Project Type (Required)"/>
-            <ComboBox Name="comboBox" 
+            <ComboBox Name="comboBox"  ItemsSource="{Binding Items}"
+                  SelectedItem="{Binding SelectedItem}"
       Width="200" 
       Height="30" 
       VerticalAlignment="Center" 
       HorizontalAlignment="Center">
-                <ComboBoxItem Content="A" />
-                <ComboBoxItem Content="B" />
-                <ComboBoxItem Content="C" />
-                <ComboBoxItem Content="D" />
+                
             </ComboBox>
             <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
-            <DatePicker Name="StartDatePicker"  >
+            <DatePicker Name="StartDatePicker"  SelectedDate="{Binding StartDate}" >
             </DatePicker>
             <TextBlock TextWrapping="Wrap" Text="End Date" />
-            <DatePicker Name="EndDatePicker"  >
+            <DatePicker Name="EndDatePicker"  SelectedDate="{Binding EndDate}" >
             </DatePicker>
             <TextBlock TextWrapping="Wrap" Text="Project Manager"/>
-            <ComboBox Name="comboBox2" 
+            <ComboBox Name="comboBox2" ItemsSource="{Binding Items2}"
+                  SelectedItem="{Binding SelectedItem2}"
       Width="200" 
       Height="30" 
       VerticalAlignment="Center" 
       HorizontalAlignment="Center">
             </ComboBox>
             <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Width="200" Margin="0,0,0,10"/>
+            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
             <TextBlock TextWrapping="Wrap" Text="Project Status (Required)"/>
-            <ComboBox Name="comboBox3" 
+            <ComboBox Name="comboBox3"  ItemsSource="{Binding Items3}"
+                  SelectedItem="{Binding SelectedItem3}"
 Width="200" 
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
 >
-                <ComboBoxItem Content="Inactive" />
-                <ComboBoxItem Content="Active" />
+                
 
             </ComboBox>
-            <Button Content="Add project" Width="200" Click="AddProjectButton_Click"/>
+            <Button Content="Add project" Width="200" Command="{Binding AddProjectCommand}"/>
         </StackPanel>
     </Grid>
 </Window>
